# pynastran-mcp

./: .gitignore  ARCHITECTURE.md  CHERRY_STUDIO_QUICKSTART.md  CHERRY_STUDIO_TUTORIAL.md  GITHUB_PUBLISH_GUIDE.md  LICENSE  README.md  REFACTOR_SUMMARY.md  SSE_STARTUP_GUIDE.md  TODO.md  pyproject.toml  start_sse_server.sh
examples/: example_usage.py
pynastran_mcp/: __init__.py  server.py
pynastran_mcp/tools/: __init__.py  analysis_tools.py  bdf_tools.py  geometry_tools.py  op2_tools.py
tests/: http_client.py  mcp_client.py  simple_http_server.py  test_tools.py
